# Photon-pipx

./: .gitignore  pyproject.toml
src/photon/: __main__.py  flash.py  photon.py  updater.py  utils.py  zap.py
src/photon_crawler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
